--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,4 +1,6 @@
-@import "base/variables";
-
-//Components
-@import "components/page-title";
+.hello{
+  background-color: blue;
+  color: white;
+  font-size: 30px;
+  font-family: arial;
+}
